--- a/ups_monitor/templates/ups_web/block/navbar.html
+++ b/ups_monitor/templates/ups_web/block/navbar.html
@@ -1,10 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <a href="#" class="navbar-brand">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg" width="30" height="30" alt="logo">
+      <img src="/static/img/favicon.png" width="30" height="30" alt="logo">
     </a>
-    <a href="/" class="navbar-brand">
-      <img src="https://nuxtjs.org/logos/nuxt-square-white.svg" width="30" height="30" alt="logo">
-    </a>
+    
     <button class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
