--- a/ups_monitor/templates/ups_list.html
+++ b/ups_monitor/templates/ups_list.html
@@ -31,6 +31,6 @@
         {% endfor %}
       </div>
     </div>
-    <script src="{% static "js/home.js" %}"></script>
+    <script src="{% static "js/list_ups_state.js" %}"></script>
 {% endblock %}
 
