--- a/templates/block/navbar.html
+++ b/templates/block/navbar.html
@@ -1,25 +1,37 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Tenth navbar example">
-  <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
 
-    <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">UPS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/gprs/">GPRS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/vpn/">VPN</a>
-        </li>
-        <li class="nav-item dropdown">
 
-          </ul>
+
+{% if user.is_authenticated %}    
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+  <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+      
+  </div>
+  <div class="mx-auto order-0">
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+            <a class="nav-link" href="/">UPS</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/gprs/">GPRS</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href=""/vpn/"">VPN</a>       
+    </ul>
+      
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+  </div>
+
+  <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+      <ul class="navbar-nav ml-auto">
+        <li>
+            <span class="navbar-brand mx-auto" >{{ user.username }}</span>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}">logout</a>
         </li>
       </ul>
-    </div>
   </div>
 </nav>
+{% endif %}
