--- a/ups_monitor/templates/ups_list.html
+++ b/ups_monitor/templates/ups_list.html
@@ -3,7 +3,11 @@
 {% block title %}Главная страница моего блога{% endblock %}
 
 {% block header %}
-   
+      <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+      ></script>
 {% endblock %}
 {% load static %}
 {% block content %}
@@ -15,7 +19,7 @@
           <div class="card mb-4 shadow-sm">
             <img src="{% static "img/third_img.jpg" %}" alt="" class="card-img-top">
             <div class="card-body">
-              <h4 class="card-title" ><span class="ups_name"></span></h4>
+              <h4 class="card-title" >Name: <span class="ups_name">{{ ups.ups.name }}</span></h4>
               <p class="card-text" >Main voltage: <span class="ups_main_voltage"></span>  V</p>
               <p class="card-text" >Load: <span class="ups_load"></span> </p>
               <p class="card-text" >Temperature: <span class="ups_temperature"></span> C</p>
@@ -27,7 +31,7 @@
                 
               </div>
               <div class="d-flex justify-content-between align-items-center">
-              <a href="/" class="btn btn-primary">Check now</a>
+              <button class="btn btn-primary" type="button" value="{{ ups.ups.ip }}" id="check_now">Check now</button>
               <a href="{{ ups.get_absolute_url }}" class="btn btn-primary">Detail</a>
               </div>
             </div>
